<resources>
    <string name="app_name">JY Share</string>
    <string name="app_package_name">com.janyo.janyoshare</string>
    <string name="authorities">com.janyo.janyoshare</string>

    <string name="exception_time">崩溃时间：%1$s</string>
    <string name="exception_version">崩溃版本：%1$s_%2$d</string>
    <string name="exception_sdk">SDK：%1$s_%2$d</string>
    <string name="exception_vendor">Vendor：%1$s</string>
    <string name="exception_model">Model：%1$s</string>
    <string name="exception_message">崩溃详情：\n%1$s</string>

    <string name="janyo_studio">JanYo Studio</string>
    <string name="dicklight">DickLight</string>
    <string name="zh_lyh">ZH_LYH</string>
    <string name="cieyget">CieyGet</string>
    <string name="mystery0">Mystery0</string>
    <string name="gsoy">Gsoy</string>
    <string name="kiva">Kiva</string>
    <string name="copyright">Copyright @2016–2017 JanYo Studio</string>
    <string name="all_right_reserved">All Right Reserved</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">搜索</string>
    <string name="action_clear_all">清除临时文件</string>
    <string name="action_settings">设置</string>
    <string name="action_sort">排序</string>
    <string name="action_done">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_copy">仅提取</string>
    <string name="action_copy_share">提取并分享</string>
    <string name="action_rename_share">重命名并分享</string>
    <string name="action_close">关闭</string>
    <string name="action_open">开启</string>
    <string name="action_file_transfer">面对面分享</string>
    <string name="action_send_files">发送文件</string>
    <string name="action_pause">暂停</string>
    <string name="action_resume">继续</string>
    <string name="action_pay_sure">支付完成</string>
    <string name="action_done_get">提取选定的软件</string>
    <string name="action_dayNight">夜间模式</string>
    <string name="action_upload">上传</string>
    <string name="action_upload_file">点击上传日志文件</string>
    <string name="action_restart">重启应用</string>
    <string name="action_exit">退出应用</string>
    <string name="action_select_all">全选</string>
    <string name="action_select_none">反选</string>
    <string name="action_insert">插入百分号(%)</string>

    <string name="how_to_use">如何使用</string>
    <string name="about">关于</string>
    <string name="send_file">发送文件</string>
    <string name="receive_file">接收文件</string>
    <string name="copy_file_loading">提取中……</string>
    <string name="copy_file_selection">请选择操作</string>
    <string name="pay_method_title">请选择捐赠方式</string>

    <string name="hint_copy_error">文件提取失败！</string>
    <string name="hint_copy_error_with_name">提取%1$s失败！</string>
    <string name="hint_copy_done_with_number">提取完成！%1$d个成功，%2$d失败！</string>
    <string name="hint_copy_exist">文件已经存在！</string>
    <string name="hint_copy_not_exist">文件不存在！</string>
    <string name="hint_recopy">重新提取</string>
    <string name="hint_copy_done">文件提取成功！存储路径为SD卡根目录下%1$s文件夹。</string>
    <string name="hint_new_name">请输入新的文件名(不包含扩展名)</string>
    <string name="hint_new_name_extension">请输入新的扩展名名(留空则默认为jys)</string>
    <string name="hint_rename_error">重命名失败，已取消分享！</string>
    <string name="hint_clear_file">文件清除%1$s！</string>
    <string name="hint_select_sort">请选择排序方式</string>
    <string name="hint_check_obb_exists">检测到数据包，是否进行分享？</string>
    <string name="hint_check_obb_not_exists">文件提取完成，该软件不存在数据包！</string>
    <string name="hint_check_obb_number_warning">文件提取完成，该软件共有%1$d个数据包，是否分享？</string>
    <string name="hint_socket_wait_server">等待设备连接……</string>
    <string name="hint_socket_wait_client">正在搜索设备……</string>
    <string name="hint_socket_connecting">连接中……</string>
    <string name="hint_socket_timeout">连接超时！</string>
    <string name="hint_socket_verify_device_title">确认设备？</string>
    <string name="hint_socket_verify_device_message">确认从 %1$s 处接收文件吗？</string>
    <string name="hint_socket_verifying">验证中……</string>
    <string name="hint_socket_verify_error">连接失败！</string>
    <string name="hint_socket_connected">连接成功！</string>
    <string name="hint_socket_scan_complete">未找到设备</string>
    <string name="hint_twice_exit">再按一次返回键退出</string>
    <string name="hint_permission">请授予存储权限来拷贝apk文件到SD卡</string>
    <string name="hint_developer_mode">还差%1$d步启用开发者模式</string>
    <string name="hint_developer_mode_enable">已启用开发者模式！</string>
    <string name="hint_transfer_file_notification_title">正在传输： %1$s</string>
    <string name="hint_transfer_file_notification_message">点击打开文件</string>
    <string name="hint_transfer_file_notification_done">传输完成： %1$s</string>
    <string name="hint_transfer_file_exists">文件已存在！</string>
    <string name="hint_transfer_file_not_exists">文件不存在！</string>
    <string name="hint_transfer_file_unknown_error">未知错误！</string>
    <string name="hint_pay_done">感谢您的捐赠</string>
    <string name="hint_pay_save_img">长按图片保存</string>
    <string name="hint_pay_save_img_done">二维码已经保存到SD卡根目录下%1$s文件夹!</string>
    <string name="hint_pay_save_img_error">二维码保存失败！</string>
    <string name="hint_pay_error">支付失败！请选择其他方式。</string>
    <string name="hint_exclude_list_title">排除列表</string>
    <string name="hint_exclude_list_loading">请等待……</string>
    <string name="hint_exclude_name_title">关键字列表（多个关键字使用英文逗号隔开）</string>
    <string name="hint_exclude_size_title">排除APK大小临界值（单位MB，可使用小数）</string>
    <string name="hint_exclude_size_error">临界值不能小于或等于0</string>
    <string name="hint_exclude_regular_expression_title">正则表达式</string>
    <string name="hint_exclude_regular_expression_error">无效表达式！</string>
    <string name="hint_disable_accessibility_dis">已禁用SnackBar动画！</string>
    <string name="hint_disable_accessibility">设置项未开启！</string>
    <string name="hint_disable_accessibility_text">禁用SnackBar动画</string>
    <string name="hint_custom_name_format_title">自定义命名格式</string>
    <string name="hint_custom_name_format_text">%N代表应用名称，\n%V代表应用的版本名称，\n%W代表应用的版本号，\n%P代表应用的包名</string>
    <string name="hint_custom_name_format_show">当前格式示例：%1$s</string>
    <string name="hint_jys_rename_error">重命名失败！</string>
    <string name="hint_long_click_do_title">请选择长按的操作</string>
    <string name="hint_day_night">重启应用后全局生效！</string>
    <string name="hint_upload_log">日志文件上传中……</string>
    <string name="hint_upload_log_done">日志已经成功反馈给开发者，即将重启应用！</string>
    <string name="hint_upload_log_error">日志上传失败！</string>
    <string name="hint_copy_info">信息复制成功！</string>
    <string name="hint_text_support_title">捐赠名单</string>
    <string name="hint_how_to_use_action">重启应用后将会显示引导界面！</string>
    <string name="hint_showcase_action_search">在这里，你可以通过搜索快速定位某一个软件。</string>
    <string name="hint_showcase_action_clear">单击这个按钮，可以手动清除缓存文件夹类的临时文件（不包括日志）。</string>
    <string name="hint_showcase_desc_action_clear">当然，如果你在设置中打开了自动清理，软件将会在每次运行时自动清除上一次产生的临时文件。</string>
    <string name="hint_showcase_nav_icon">在这里你可以进行更多的操作。</string>
    <string name="hint_file_transfer_path_error">文件异常！</string>

    <string name="address_open_source">https://github.com/JanYoStudio/JanYoShare</string>
    <string name="address_check_update">https://play.google.com/store/apps/details?id=com.janyo.janyoshare</string>
    <string name="address_become_test">https://play.google.com/apps/testing/com.janyo.janyoshare</string>
    <string name="address_join_test_group">https://jq.qq.com/?_wv=1027&amp;k=4Ea0d0A</string>
    <string name="address_home_page">http://janyo.pw/</string>

    <string name="help_text_1">JY Share可以使你快捷 分享/提取 系统预装/用户安装 的应用程序，并且在操作过程中自动重命名文件或者手动重命名，使其具备一个包含意义的文件名。</string>
    <string name="help_text_2">通过单击列表中的应用然后选择对应的操作，这将调用系统分享组件，应用将以附件形式附加到诸如邮件，或者一些支持文件共享的社交工具。此操作将会在SD卡JY Share目录产生临时文件，将在下一次启动程序时自动清理(默认开启)。为保证临时文件不会对你的剩余空间造成不必要的占用，我们建议你在应用设置中开启自动清理临时文件(默认开启) 。</string>
    <string name="autoCleanWarn">注意，你在使用JYShare提取你所需的App到SD卡JY Share目录后，如果你需要对已提取的App安装包进行额外的操作时，请确保你在下一次启动JYShare时从临时目录转移你的安装包，否则将被自动清理。</string>
    <string name="disableAccessibilityWarn">警告，如果您的设备没有开启任何无障碍服务则不需要开启这个设置项，如果开启此设置项后闪退，请使用ShortCut禁用此选项。如果无法使用ShortCut，请清除数据。</string>

    <string name="license_title">“JanYo Studio” 授权解决方案</string>
    <string name="license_subtitle">为避免在其它非“JanYo Studio”通过书面授权认可的平台引发的授权 风险/争议，特拟此案。</string>
    <string name="license_text1">“JanYo Studio”(以下简称“工作室”)发布的产品缺省使用“GPL（GNU General Public License）”授权协议。工作室将在产品内部标识产品源程序及其附属品，使得任何人可以自由获取、阅读、传播，以及基于源代码重新构建它的二进制版本并发行该副本。</string>
    <string name="license_text2">工作室希望使用者在自由使用我们的产品时，尊重工作室的劳动成果，承认工作室的知识产权。</string>
    <string name="license_text3">工作室保证产品的自由使用、传播、阅读不受限，使用者应保障工作室的合法权益：</string>
    <string name="license_text4">针对开源资料，禁止删改原作者注明的版权、授权方式 等信息。</string>
    <string name="license_text5">源代码允许自由使用、添加至自己的项目，但必须注明来源，以及源的授权协议。</string>
    <string name="license_text6">在从事盈利、商用活动中，针对产品的传播复制需注明来源，以及源的授权协议。</string>
    <string name="license_text7">针对产品授权、答疑可电邮至工作室官方电子邮箱 : mystery0dyl520@gmail.com</string>

    <string-array name="sort">
        <item>默认排序</item>
        <item>按名称排序</item>
        <item>按大小排序</item>
        <item>按包名排序</item>
        <item>按安装时间排序</item>
        <item>按更新时间排序</item>
    </string-array>

    <string-array name="copy_do">
        <item>仅提取</item>
        <item>提取并分享</item>
        <item>重命名并分享</item>
        <item>修改扩展名后分享</item>
        <item>提取后和数据包一起分享</item>
        <item>面对面分享</item>
        <item>复制信息</item>
    </string-array>

    <string-array name="copy_info">
        <item>复制软件名称</item>
        <item>复制包名</item>
        <item>复制版本名称</item>
        <item>复制版本号</item>
    </string-array>

    <string-array name="long_click_do">
        <item>无操作</item>
        <item>提取并分享</item>
        <item>重命名并分享</item>
        <item>修改扩展名后分享</item>
        <item>提取后和数据包一起分享</item>
        <item>面对面分享</item>
    </string-array>

    <string-array name="pay_method">
        <item>支付宝转账</item>
        <item>微信转账</item>
        <item>Google Play内购</item>
        <item> </item>
    </string-array>

    <string-array name="pay_method_without_play">
        <item>支付宝转账</item>
        <item>微信转账</item>
        <item> </item>
    </string-array>

    <string-array name="become_test">
        <item>加入内测群</item>
        <item>成为Google Play测试人员</item>
    </string-array>

    <string name="title_activity_file_transfer">文件传输</string>
    <string name="title_activity_file_transfer_configure">文件传输</string>
    <string name="title_activity_file_transfer_send">通过JY Share面对面分享</string>
    <string name="title_fragment_user">用户软件</string>
    <string name="title_fragment_system">系统软件</string>
</resources>
