<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/action_file_transfer"
        android:icon="@drawable/ic_file_transfer"
        android:title="@string/action_file_transfer"/>

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/action_clear_all"/>

    <item
        android:id="@+id/action_night"
        android:icon="@drawable/ic_day_night"
        android:title="@string/action_dayNight"
        app:actionLayout="@layout/switch_item"/>

    <item
        android:id="@+id/action_license"
        android:icon="@drawable/ic_license"
        android:title="@string/title_license"/>

    <item
        android:id="@+id/action_support"
        android:icon="@drawable/ic_support"
        android:title="@string/title_support"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"/>

    <item android:title="@string/janyo_studio">
        <menu>
            <item android:title="@string/dicklight"/>
            <item android:title="@string/zh_lyh"/>
            <item android:title="@string/cieyget"/>
            <item android:title="@string/mystery0"/>
            <item android:title="@string/gsoy"/>
            <item android:title="@string/kiva"/>
        </menu>
    </item>

</menu>
