<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/action_clear_all"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/action_done_get"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_send"
        android:title="@string/action_send_files"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>
