<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top_title"
            android:gravity="center_horizontal"
            android:text="@string/license_title"
            android:textSize="@dimen/dialog_license_title"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top_title"
            android:text="@string/license_subtitle"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top"
            android:text="@string/license_text1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top"
            android:text="@string/license_text2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top"
            android:text="@string/license_text3"/>

        <TextView
            android:id="@+id/license_point1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top"
            android:text="@string/license_text4"/>

        <TextView
            android:id="@+id/license_point2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top"
            android:text="@string/license_text5"/>

        <TextView
            android:id="@+id/license_point3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top"
            android:text="@string/license_text6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_license_margin_top_title"
            android:text="@string/license_text7"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
